--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@use '../../../node_modules/ngx-drag-drop-kit/assets/styles.css';
 body {
   margin: 0;
 }
