--- a/projects/report-builder/src/lib/report-builder.scss
+++ b/projects/report-builder/src/lib/report-builder.scss
@@ -60,7 +60,26 @@
   margin: 0 auto;
   box-shadow: 0px 0px 10px rgb(0 0 0 / 26%);
   .placeholder {
-    border: 1px dashed #0400ff;
+    border: 2px #008a3c solid;
+    &:after,
+    &::before {
+      position: absolute;
+      content: ' ';
+      border: 8px #008a3c solid;
+      top: -8px;
+    }
+    &:after {
+      border-bottom-color: transparent;
+      border-top-color: transparent;
+      border-left-color: transparent;
+      right: -2px;
+    }
+    &:before {
+      border-bottom-color: transparent;
+      border-top-color: transparent;
+      border-right-color: transparent;
+      left: -2px;
+    }
   }
 }
 
