add toggle selector and outliner

--- a/projects/page-builder/src/components/block-selector/block-selector.component.html
+++ b/projects/page-builder/src/components/block-selector/block-selector.component.html
@@ -1,10 +1,10 @@
-@if(activeItem() && rect){
+@if(activeItem()){
 <div
   class="block-selector"
-  [style.left.px]="rect.left"
-  [style.top.px]="rect.top"
-  [style.width.px]="rect.width"
-  [style.height.px]="rect.height"
+  [style.left.px]="x"
+  [style.top.px]="y"
+  [style.width.px]="width"
+  [style.height.px]="height"
 >
   <div class="actions">
     <button type="button" (click)="deleteBlock()">
