--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -1,6 +1,6 @@
 .page-builder-container {
   display: grid;
-  grid-template-columns: 40px auto 250px;
+  grid-template-columns: 40px auto 350px;
   grid-template-rows: 28px auto;
   gap: 0px 5px;
   min-height: 100vh;
@@ -8,6 +8,9 @@
   --tools-bg: #282828;
   --tools-fg: #fff;
   --tools-border: 1px solid #eeeeee76;
+  --active-button: #0040ff;
+  --page-padding: 15px;
+  --toolbar-sticky-offset: 0;
   * {
     box-sizing: border-box;
   }
@@ -19,11 +22,35 @@
   display: flex;
   background-color: var(--tools-bg);
   color: var(--tools-fg);
+  position: sticky;
+  top: var(--toolbar-sticky-offset);
+  z-index: 100;
+  button {
+    outline: none;
+    border: none;
+    border-radius: 3px;
+    padding: 4px 8px;
+    cursor: pointer;
+    background: transparent;
+    color: inherit;
+    min-width: 50px;
+    transition: background 0.2s ease;
+    &:hover {
+      background: var(--active-button);
+    }
+    svg {
+      color: var(--tools-fg);
+      fill: var(--tools-fg);
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
 }
 .properties {
   border: none var(--tools-border);
   background-color: var(--tools-bg);
   color: var(--tools-fg);
+  padding: 10px;
 }
 .components {
   border: none var(--tools-border);
@@ -58,6 +85,7 @@
   background: #fff;
   width: 210mm;
   margin: 0 auto;
+  padding: var(--page-padding);
   box-shadow: 0px 0px 10px rgb(0 0 0 / 26%);
   .placeholder {
     border: 2px #008a3c solid;
@@ -83,12 +111,14 @@
   }
 }
 
-.block-item {
-  border: 1px dashed #8d8d8d;
-  min-width: 50px;
-  min-height: 50px;
-  margin: 10px;
-  &:hover {
-    border-color: #00b3ff;
+.page-container.show-outlines {
+  .block-item {
+    outline: 1px dashed #8d8d8d;
+    outline-offset: 1px;
+    min-width: 50px;
+    min-height: 50px;
+    &:hover {
+      outline-color: #00b3ff;
+    }
   }
 }
