--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -25,6 +25,7 @@
   position: sticky;
   top: var(--toolbar-sticky-offset);
   z-index: 100;
+  user-select: none;
   button {
     outline: none;
     border: none;
