--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -84,7 +84,7 @@
     }
   }
 }
-.page-container {
+.paper {
   border: var(--tools-border);
   background: #fff;
   width: 210mm;
@@ -115,7 +115,7 @@
   }
 }
 
-.page-container.show-outlines {
+.paper.show-outlines {
   .block-item {
     outline: 1px dashed #8d8d8d;
     outline-offset: 1px;
