--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -6,6 +6,8 @@
   min-height: 100vh;
   background: #f6f6f6;
   --tools-bg: #282828;
+  --toolbar-bg: #353535;
+  --toolbar-fg: #ffffff;
   --tools-fg: #fff;
   --tools-border: 1px solid #eeeeee76;
   --active-button: #0040ff;
@@ -16,37 +18,6 @@
   }
 }
 
-.tool-bar {
-  grid-row-start: 1;
-  grid-column: span 3 / span 3;
-  display: flex;
-  background-color: var(--tools-bg);
-  color: var(--tools-fg);
-  position: sticky;
-  top: var(--toolbar-sticky-offset);
-  z-index: 100;
-  user-select: none;
-  button {
-    outline: none;
-    border: none;
-    border-radius: 3px;
-    padding: 4px 8px;
-    cursor: pointer;
-    background: transparent;
-    color: inherit;
-    min-width: 50px;
-    transition: background 0.2s ease;
-    &:hover {
-      background: var(--active-button);
-    }
-    svg {
-      color: var(--tools-fg);
-      fill: var(--tools-fg);
-      max-width: 100%;
-      max-height: 100%;
-    }
-  }
-}
 .properties {
   border: none var(--tools-border);
   background-color: var(--tools-bg);
@@ -74,6 +45,7 @@
     justify-content: center;
     z-index: 1;
     overflow: hidden;
+    user-select: none;
     transition: transform 0.2s ease;
     &:hover {
       cursor: pointer;
@@ -88,9 +60,21 @@
   border: var(--tools-border);
   background: #fff;
   width: 210mm;
+  min-height: 297mm;
   margin: 0 auto;
   padding: var(--page-padding);
   box-shadow: 0px 0px 10px rgb(0 0 0 / 26%);
+  &.show-outlines {
+    .block-item {
+      outline: 1px dashed #8d8d8d;
+      outline-offset: 1px;
+      min-width: 50px;
+      min-height: 20px;
+      &:hover {
+        outline-color: #00b3ff;
+      }
+    }
+  }
   .placeholder {
     border: 2px #008a3c solid;
     &:after,
@@ -113,16 +97,22 @@
       left: -2px;
     }
   }
-}
 
-.paper.show-outlines {
-  .block-item {
-    outline: 1px dashed #8d8d8d;
-    outline-offset: 1px;
-    min-width: 50px;
-    min-height: 20px;
-    &:hover {
-      outline-color: #00b3ff;
+  .paper-inner {
+    min-height: inherit;
+  }
+  table.ngx-page-builder {
+    width: 100%;
+    border-spacing: 0;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    th {
+      text-align: start;
     }
+  }
+  .page-body {
+    min-height: calc(297mm / 2);
   }
 }
