--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -1,3 +1,12 @@
+:root {
+  /* page sizes */
+  --a4-width: 210mm;
+  --a4-height: 297mm;
+  --a5-width: 148mm;
+  --a5-height: 210mm;
+  --letter-width: 216mm;
+  --letter-height: 279mm;
+}
 .page-builder-container {
   display: grid;
   grid-template-columns: 40px auto 350px;
@@ -13,6 +22,7 @@
   --active-button: #0040ff;
   --page-padding: 15px;
   --toolbar-sticky-offset: 0;
+
   * {
     box-sizing: border-box;
   }
@@ -59,11 +69,36 @@
 .paper {
   border: var(--tools-border);
   background: #fff;
-  width: 210mm;
-  min-height: 297mm;
+  width: var(--a4-width);
+  min-height: var(--a4-height);
   margin: 0 auto;
   padding: var(--page-padding);
   box-shadow: 0px 0px 10px rgb(0 0 0 / 26%);
+  &.A4.Portrait {
+    width: var(--a4-width);
+    min-height: var(--a4-height);
+  }
+  &.A4.Landscape {
+    width: var(--a4-height);
+    min-height: var(--a4-width);
+  }
+  &.A5.Portrait {
+    width: var(--a5-width);
+    min-height: var(--a5-height);
+  }
+  &.A5.Landscape {
+    width: var(--a5-height);
+    min-height: var(--a5-width);
+  }
+  &.Letter.Portrait {
+    width: var(--letter-width);
+    min-height: var(--letter-height);
+  }
+  &.Letter.Landscape {
+    width: var(--letter-height);
+    min-height: var(--letter-width);
+  }
+
   &.show-outlines {
     .block-item {
       outline: 1px dashed #8d8d8d;
@@ -113,6 +148,6 @@
     }
   }
   .page-body {
-    min-height: calc(297mm / 2);
+    min-height: calc(var(--a5-height) / 2);
   }
 }
