--- a/projects/page-builder/src/components/text-editor/text-editor.component.html
+++ b/projects/page-builder/src/components/text-editor/text-editor.component.html
@@ -66,6 +66,8 @@
     (keyup)="onKeyUp()"
     spellcheck="true"
   ></div>
+
+  selected char count:{{ selectedCharCount }}
 </div>
 
 <div class="footer">
