--- a/projects/page-builder/src/lib/toolbar/toolbar.component.scss
+++ b/projects/page-builder/src/lib/toolbar/toolbar.component.scss
@@ -17,11 +17,12 @@
     cursor: pointer;
     background: transparent;
     color: inherit;
-    min-width: 50px;
+    min-width: 38px;
     max-height: 100%;
     height: 100%;
     transition: background 0.2s ease;
-    &:hover {
+    &:hover,
+    &.active {
       background: var(--active-button);
     }
     svg {
