--- a/projects/page-builder/src/components/block-properties/block-properties.component.html
+++ b/projects/page-builder/src/components/block-properties/block-properties.component.html
@@ -12,4 +12,5 @@
 </div>
 
 <spacing-control [(ngModel)]="item" (change)="onChangeProperties()"></spacing-control>
+<typography-control [(ngModel)]="item" (change)="onChangeProperties()"></typography-control>
 }
