--- a/projects/page-builder/src/components/block-properties/block-properties.component.html
+++ b/projects/page-builder/src/components/block-properties/block-properties.component.html
@@ -13,4 +13,5 @@
 
 <spacing-control [(ngModel)]="item" (change)="onChangeProperties()"></spacing-control>
 <typography-control [(ngModel)]="item" (change)="onChangeProperties()"></typography-control>
+<background-control [(ngModel)]="item" (change)="onChangeProperties()"></background-control>
 }
