--- a/projects/page-builder/src/controls/spacing-control/spacing-control.component.html
+++ b/projects/page-builder/src/controls/spacing-control/spacing-control.component.html
@@ -1,5 +1,5 @@
 @if(spacing){
-<table class="spacing-table">
+<table class="properties-table">
   <tbody>
     <tr>
       <th colspan="2" align="start">Margin: {{ style?.margin }}</th>
@@ -19,7 +19,11 @@
       ></ng-container>
     </ng-container>
     }
+  </tbody>
+</table>
 
+<table class="properties-table">
+  <tbody>
     <tr>
       <th colspan="2" align="start">Padding: {{ style?.padding }}</th>
     </tr>
