--- a/projects/page-builder/src/controls/typography-control/typography-control.component.html
+++ b/projects/page-builder/src/controls/typography-control/typography-control.component.html
@@ -1,4 +1,4 @@
-<table class="spacing-table">
+<table class="properties-table">
   <tbody>
     <tr>
       <th colspan="2" align="start">Typography:</th>
