--- a/projects/page-builder/src/components/block-properties/block-properties.component.scss
+++ b/projects/page-builder/src/components/block-properties/block-properties.component.scss
@@ -29,8 +29,12 @@
   margin-bottom: 20px;
   tr td:nth-child(1) {
     width: 40%;
+    font-size: 12px;
   }
   .input-group {
     display: flex;
+  }
+  .input-color {
+    width: 40px;
   }
 }
