--- a/projects/page-builder/src/controls/beckground-control/background-control.component.html
+++ b/projects/page-builder/src/controls/beckground-control/background-control.component.html
@@ -1,3 +1,22 @@
+{{ isImageTag }}
+@if (isImageTag) {
+<!-- Properties Table -->
+<table class="properties-table">
+  <tbody>
+    <tr>
+      <th colspan="2" align="start">Image Properties</th>
+    </tr>
+    <tr>
+      <td><label for="image-url">Image URL:</label></td>
+      <td>
+        <button type="button" (click)="onChangeSrcImage()">Change Image</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+}
+
 <div class="background-control">
   <!-- Mode Selector -->
   <div class="mode-selector">
@@ -96,6 +115,7 @@
       <tr *ngIf="mode.includes('image')">
         <td><label for="background-image">Image URL:</label></td>
         <td>
+          <button type="button" (click)="openImagePicker()">Choose Image</button>
           <input
             id="background-image"
             type="text"
