--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -142,6 +142,11 @@
   .page-body {
     min-height: calc(var(--a5-height) / 2);
   }
+  img,
+  svg {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 .show-outlines {
   .block-item {
