--- a/projects/page-builder/src/lib/toolbar/toolbar.component.html
+++ b/projects/page-builder/src/lib/toolbar/toolbar.component.html
@@ -34,6 +34,14 @@
       />
     </svg>
   </button>
+
+  <button (click)="previousPage()" title="Previous page">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M234.8 36.25c3.438 3.141 5.156 7.438 5.156 11.75c0 3.891-1.406 7.781-4.25 10.86L53.77 256l181.1 197.1c6 6.5 5.625 16.64-.9062 22.61c-6.5 6-16.59 5.594-22.59-.8906l-192-208c-5.688-6.156-5.688-15.56 0-21.72l192-208C218.2 30.66 228.3 30.25 234.8 36.25z"
+      />
+    </svg>
+  </button>
   <input
     [min]="1"
     [max]="pageBuilderService.pageInfo.pages.length"
@@ -43,6 +51,13 @@
   />
   <span>/</span>
   <span>{{ pageBuilderService.pageInfo.pages.length }}</span>
+  <button (click)="nextPage()" title="Next page">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M85.14 475.8c-3.438-3.141-5.156-7.438-5.156-11.75c0-3.891 1.406-7.781 4.25-10.86l181.1-197.1L84.23 58.86c-6-6.5-5.625-16.64 .9062-22.61c6.5-6 16.59-5.594 22.59 .8906l192 208c5.688 6.156 5.688 15.56 0 21.72l-192 208C101.7 481.3 91.64 481.8 85.14 475.8z"
+      />
+    </svg>
+  </button>
 </div>
 <!-- --------------------------------------------------------------------------------- -->
 <div class="spacer"></div>
