fix bug on change page

--- a/projects/page-builder/src/lib/toolbar/toolbar.component.scss
+++ b/projects/page-builder/src/lib/toolbar/toolbar.component.scss
@@ -50,6 +50,7 @@
     background-color: hsl(from var(--toolbar-bg) h s calc(l - 5));
     border-radius: 4px;
     max-width: 100px;
+    text-align: center;
   }
   svg {
     max-height: 100%;
