--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -128,6 +128,12 @@
   .page-body {
     min-height: calc(var(--a5-height) / 2);
   }
+  .page-header,
+  .page-footer {
+    min-height: 70px;
+    border-top: 1px dotted red;
+    border-bottom: 1px dotted red;
+  }
   img,
   svg {
     max-width: 100%;
