create dynamic data directive

--- a/projects/page-builder/src/components/text-editor/text-editor.component.html
+++ b/projects/page-builder/src/components/text-editor/text-editor.component.html
@@ -65,6 +65,9 @@
     contenteditable="true"
     (keyup)="onKeyUp()"
     spellcheck="true"
+    ngxDynamicAutocomplete
+    [dynamicData]="dynamicData"
+    (inserted)="onInsert($event)"
   ></div>
 
   selected char count:{{ selectedCharCount }}
