WIP: display control

--- a/projects/page-builder/src/components/block-properties/block-properties.component.html
+++ b/projects/page-builder/src/components/block-properties/block-properties.component.html
@@ -12,6 +12,7 @@
     </svg>
   </div>
 
+  <display-control [(ngModel)]="item" (change)="onChangeProperties()"></display-control>
   <spacing-control [(ngModel)]="item" (change)="onChangeProperties()"></spacing-control>
   <typography-control [(ngModel)]="item" (change)="onChangeProperties()"></typography-control>
   <background-control [(ngModel)]="item" (change)="onChangeProperties()"></background-control>
