Custom compoent as sources

--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -51,8 +51,8 @@
 
   .tool {
     padding: 6px;
-    border: var(--tools-border);
-    border-radius: 3px;
+    border-bottom: var(--tools-border);
+    border-radius: 0px;
     height: 40px;
     width: 40px;
     margin: 1px;
