--- a/projects/page-builder/src/components/block-properties/block-properties.component.html
+++ b/projects/page-builder/src/components/block-properties/block-properties.component.html
@@ -1,4 +1,4 @@
-<div class="sticky-top">
+<div class="sticky-top full-height properties-inner">
   <p>Properties</p>
   @if(item){
   <p>{{ item.id }}</p>
