save and load styles

--- a/projects/page-builder/src/components/block-properties/block-properties.component.html
+++ b/projects/page-builder/src/components/block-properties/block-properties.component.html
@@ -32,6 +32,7 @@
   </details>
   <details>
     <summary>Advanced Settings</summary>
+    <textcss-control [(ngModel)]="item" (change)="onChangeProperties()"></textcss-control>
   </details>
   }
 </div>
