--- a/projects/demo/src/app/preview/preview.component.html
+++ b/projects/demo/src/app/preview/preview.component.html
@@ -1,1 +1,1 @@
-<ngx-page-preview [data]="data"></ngx-page-preview>
+<ngx-page-preview [data]="data" [dynamicData]="dynamicData"></ngx-page-preview>
