--- a/projects/page-builder/src/components/text-editor/text-editor.component.html
+++ b/projects/page-builder/src/components/text-editor/text-editor.component.html
@@ -66,14 +66,13 @@
     (keyup)="onKeyUp()"
     spellcheck="true"
     ngxDynamicAutocomplete
-    [dynamicData]="dynamicData"
+    [dynamicData]="dynamicDataService.dynamicData"
     (inserted)="onInsert($event)"
   ></div>
-
-  selected char count:{{ selectedCharCount }}
 </div>
 
 <div class="footer">
+  selected char count:{{ selectedCharCount }}
   <button type="button" class="btn" (click)="ok()">Ok</button>
   <button type="button" class="btn" mat-dialog-close>Cancel</button>
 </div>
