--- a/projects/page-builder/src/styles/paper.scss
+++ b/projects/page-builder/src/styles/paper.scss
@@ -18,20 +18,6 @@
   --toolbar-height: 40px;
   --toolbar-sticky-offset: 0;
 }
-
-.page-builder-container {
-  display: grid;
-  grid-template-columns: var(--toolbar-height) auto 350px;
-  grid-template-rows: 28px auto;
-  gap: 0px 5px;
-  min-height: 100vh;
-  background: #f6f6f6;
-
-  * {
-    box-sizing: border-box;
-  }
-}
-
 .paper {
   display: flex;
   flex-direction: column;
@@ -97,6 +83,11 @@
     }
     table.ngx-page-table th {
       text-align: start;
+    }
+    img,
+    svg {
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   @media print {
