fix change preview for load real angular page

--- a/projects/page-builder/src/styles/paper.scss
+++ b/projects/page-builder/src/styles/paper.scss
@@ -1,7 +1,7 @@
 .ngx-page-builder {
   /* page sizes */
   --a4-width: 210mm;
-  --a4-height: 297mm;
+  --a4-height: 290mm; // 297mm;
   --a5-width: 148mm;
   --a5-height: 210mm;
   --letter-width: 216mm;
