isolate print preview

--- a/projects/page-builder/src/controls/beckground-control/background-control.component.html
+++ b/projects/page-builder/src/controls/beckground-control/background-control.component.html
@@ -1,5 +1,5 @@
-{{ isImageTag }}
-@if (isImageTag) {
+{{ item?.isImageTag }}
+@if (item?.isImageTag) {
 <!-- Properties Table -->
 <table class="properties-table">
   <tbody>
