--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -90,7 +90,7 @@
   min-height: 70px;
   border-top: 1px dotted red;
   border-bottom: 1px dotted red;
-  max-height: 400px;
+  max-height: 270px; /** maximum browser page header */
   overflow: hidden;
   &.is-empty::after {
     display: flex;
